BaseContactList: group the MembersChanged signals for the initial roster

We were emitting one MembersChanged and one MembersChangedDetailed
signals per contact in the subscribe list when initially connecting.
Now we group all of the initial contacts together, setting actor=0. If
contacts appear later in the subscribe list we keep emitting a signal
per contact (with themselves as actors).

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=40933>
Reviewed-by: Will Thompson <will.thompson@collabora.co.uk>
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>